# lilith

./: .gitignore  ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  chat.py  chat_simple.py  emergence.py  lilith_cli.py  lilith_config.json  lilith_dissonance.py  lilith_postprocess.py  lilith_prompt.py  llama3.py  mathbrain.py  metalilith.py  overthinking.py  phase4_bridges.py  pyproject.toml  test_async_conversation.py  test_async_init.py  tokenizer.py  trauma.py  utils.py
association/: __init__.py  engine.py
lilith_words/: __init__.py  shards.py  stats.py
tests/: __init__.py  conftest.py  run_all_tests.py  test_config.py  test_demons.py  test_emergence.py  test_leo_integration.py  test_postprocess.py  test_repl.py  test_repl_integration.py  test_setup_validation.py  test_tokenizer.py  test_tour2.py  test_utils.py
